# src/app/api/models/new-account-form.ts
@@ -1,6 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface NewAccountForm {
+  confirmPassword?: string;
   email?: string;
   name?: string;
   password?: string;
