# src/app/shared/models/new-account.ts
@@ -1,7 +1,0 @@
-export interface NewAccount {
-    name: string;
-    email: string;
-    password: string;
-    confirmPassword?: string;
-}
-
