# src/app/shared/models/password.ts
@@ -1,5 +1,0 @@
-export interface Password {
-    password: string;
-    newPassword: string;
-    confirmPassword: string;
-}
